# excalibur

./: .gitignore  .gitmodules  README.md  journal.md  package-lock.json  package.json  plan.md
.github/workflows/: build.yml
android-app/: .gitignore  NATIVE_WASM_RUNTIMES.md  PLAN.md  README.md  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/cpp/: CMakeLists.txt  kindle_wasm_runtime.cpp
android-app/docs/: drive-inbox-sync.md  usb-mtp-testing.md
consumer-app/: index.html  package.json  tsconfig.json
consumer-app/src/: assets.d.ts  assets.ts  converter.ts  db.ts  devices.ts  epubMeta.ts  main.tsx  stages.ts  store.ts  styles.css  styles.d.css.ts  types.ts  wasiPython.ts  wasiPythonWorker.ts
docs/: wasi-native-modules-build-path.md  wasi-python-calibre-progress.md  wasi-python-calibre-spike.md  wasm-runtime-spike.md
experiments/: azw3_summary.py  browser_convert.py  calibre_bootstrap.py  check_profiles.py  compare_summaries.py  convert_with_plumber.py  import_probe.py  inspect_azw3.py  list_conversion_options.py  list_profiles.py  profile_inventory.json  pyodide_calibre_run.mjs  pyodide_probe.mjs  run_fixture_conversions.py  wasi_python312_probe.py  wasi_python_probe.py  wasi_runtime_shims.py
experiments/wasi-python-spike-results/: README.md  last-output.txt
experiments/wasi-python312-spike-results/: README.md  last-output.txt
fixtures/: README.md
scripts/: build_runtime_artifacts.py  build_web_app.sh  build_web_runtime.py  ci_build_all.sh  make_minimal_epubs.py
scripts/static_wasi/: build_static_wasi_python.py  build_wasi_libs.py  probe_chicory_exnref.py  probe_static_wasi_conversion.py  probe_static_wasi_python.py  translate_wasm_eh_to_exnref.py
web/: app.js  index.html  styles.css
web/samples/: manifest.json
(+82 files in other folders)
